static/css/style.css
/* ... */
#tongue_points { font-size: 72px; line-height: 54px; margin-top:12px; font-weight:bold; color: #FFF;}
#tongue_points span { font-size: 18px; font-weight:bold;}
#tongue_activity {border-top:1px solid #92d2dd;}

/* logged out tongue */
#tongue #id_password, #tongue #id_email {width:167px;}
#tongue .form_row {padding-bottom:6px;}
#tongue_login_form_submit {margin-top:12px;}

/* ---------------------------------------------------------------------------------------------------------------------
Chart Chart Chart Chart Chart Chart Chart Chart Chart Chart Chart Chart Chart Chart Chart Chart Chart Chart Chart Chart 
--------------------------------------------------------------------------------------------------------------------- */
#chart{ width:600px; height:400px; }
.chart_tooltip {
    width:250px;
    font-size:12px;
    border: 2px solid #000;
    padding: 5px;
    background-color: #F4F9FD;
    z-index:1002; }

/* ---------------------------------------------------------------------------------------------------------------------
Actions Actions Actions Actions Actions Actions Actions Actions Actions Actions Actions Actions Actions Actions Actions 
--------------------------------------------------------------------------------------------------------------------- */
.action_nugget {float:left; margin-right:13px;}
.action_nugget .box_one_middle {min-height:177px;}
.action_nugget_status { float:left; font-weight:bold;}
.action_nugget_points { text-align:right; font-weight: bold;}
.action_nugget img {  margin-top:3px;}
.action_nugget_title {max-height:48px; overflow:hidden; font-weight:bold; color: #388ca0; font-size:18px; line-height:24px;}
.action_nugget_teaser {max-height:54px; overflow:hidden;}
.action_nugget_wrapper_three { width:729px;}
.action_nugget_wrapper_two { width:486px;}
#action_title { margin-bottom: 10px; }
#action_details object {
    padding: 9px;
    background-color: #D1DDE8;
    -moz-border-radius: 9px;
    -webkit-border-radius: 9px;
    border-radius: 9px; }
#action_details li { list-style: disc; }
#action_details img {margin:9px;}
.action_complete_form, .action_commit_form, .action_undo_form {
    float: left;
    text-align: center; }
.action_committment, .action_undo { font-size: 12px; }
.action_complete_form input {margin-left:12px;}

/* ---------------------------------------------------------------------------------------------------------------------
Comments Comments Comments Comments Comments Comments Comments Comments Comments Comments Comments Comments Comments
--------------------------------------------------------------------------------------------------------------------- */
.comment_wrapper { position:relative; margin-bottom:18px;}
.comment, #comment_form textarea {
    color: #74A01F;
    font-size: 16px;
    line-height: 21px;
    font-weight: normal;
    border: 0;
    position: relative;
    overflow-x: auto; }
.point {
    width: 0;
    height: 0;
    position: absolute;
    top: 24px;
    right: -25px;
    display: block;
    border-top: 25px solid #FFF; 
    border-right: 25px solid #B0D8F2; /* IE fix */
    border-right: 25px solid rgba(0,0,0,0); 
    overflow: hidden; /* IE fix */ }
.comment_author { font-weight: bold; font-size: 18px; padding-left:25px; margin-top:10px;}
.comment_author img {margin-bottom:9px;}
/* stuff under comment */
.comment_tools { position: relative; font-style: italic; text-align:right; margin: 0px 18px 0 0;}
.comment_buttons * { display: inline; }
.comment_date { position:absolute; top: 9px; left:18px; }
/* form */
#id_comment { height: 100px; background: #FFF; font-family: Helvetica, Arial; width:454px; }
#id_comment[class~="error"] { background: #FEDEDE; }
#add_comment_submit { width: 490px; }

/* ---------------------------------------------------------------------------------------------------------------------
Groups Groups Groups Groups Groups Groups Groups Groups Groups Groups Groups Groups Groups Groups Groups Groups Groups 
--------------------------------------------------------------------------------------------------------------------- */
#group_slug_wrapper { position: relative; }
#group_slug_domain {
    font-family: helvetica;
    font-size: 12px;
    color: #333;
    position: absolute;
    top: 31px;
    left: 0; }
#group_slug_address { margin-left: 150px; width: 170px; }
.group_image, .group_details { float: left; }
.membership_request { list-style: disc inside; }
.membership_tools {  font-weight: bold; margin-left: 30px; }
.group_details { padding-left: 10px; }
.group_list {margin:0px; padding:0px; list-style-type: none; height:100%; overflow:auto;}
.group_list li{ float:left; width:189px; margin:0px 18px 0px 0; height:72px;}
.group_list_thumb { float:left; margin-right:8px;}
.group_list_name {float:left; width:130px;}
th.header {  
    cursor: pointer;
    background-repeat: no-repeat; 
    background-position: center left; 
    padding-left: 20px; 
    border-right: 1px solid #dad9c7; 
    margin-left: -1px; }
th.headerSortUp, th.headerSortDown { background-color: #3399FF;}
.search_title { margin-top: 30px; }
.group_disc_reply_count {float:right;}
.group_disc_box_links {position:absolute; top:0px; right:23px;}

/* ---------------------------------------------------------------------------------------------------------------------
Search Widget Search Widget Search Widget Search Widget Search Widget Search Widget Search Widget Search Widget Search
--------------------------------------------------------------------------------------------------------------------- */
/*
.search_fields { width: 100%; }
.search_widget label.inside { display: block; top: 16px; left: 11px; }
.search_widget .search_value {width: 62%; }
.search_widget li { list-style: none; display: block; margin-bottom: 10px; }
/* ... */

